--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Dedicated Vue IDE",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server --hot"
   },
   "repository": {
     "type": "git",
@@ -28,12 +29,21 @@
   },
   "homepage": "https://github.com/wachka06/Vuety#readme",
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.4",
+    "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
-    "webpack": "^5.52.0"
+    "vue-loader": "^15.9.8",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^5.52.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.1.0"
   },
   "dependencies": {
+    "core-js": "^2.6.12",
     "vue": "^3.2.8"
   }
 }
