--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --hot"
+    "dev": "NODE_ENV=development webpack-dev-server --hot"
   },
   "repository": {
     "type": "git",
@@ -31,13 +31,13 @@
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.4",
+    "@vue/compiler-sfc": "^3.2.9",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
-    "vue-loader": "^15.9.8",
+    "vue-loader": "^16.5.0",
     "vue-style-loader": "^4.1.3",
-    "vue-template-compiler": "^2.6.14",
     "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.1.0"
