--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   },
   "dependencies": {
     "core-js": "^2.6.12",
-    "vue": "^3.2.8"
+    "node-pty": "^0.10.1",
+    "vue": "^3.2.8",
+    "xterm": "^4.13.0"
   }
 }
