--- a/package.json
+++ b/package.json
@@ -1,39 +1,42 @@
 {
   "name": "vuety",
-  "version": "1.0.0",
-  "description": "Dedicated Vue IDE",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wachka06/Vuety.git"
-  },
-  "keywords": [],
-  "authors": [
-    {
-      "name": "Brandon Bowers"
-    },
-    {
-      "name": "Graham Pierce"
-    },
-    {
-      "name": "Natsuki Wada"
-    }
-  ],
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/wachka06/Vuety/issues"
-  },
-  "homepage": "https://github.com/wachka06/Vuety#readme",
-  "devDependencies": {
-    "css-loader": "^6.2.0",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
-    "webpack": "^5.52.0"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^3.2.8"
-  }
+    "core-js": "^3.6.5",
+    "vue": "^3.0.0"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^7.0.0"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
