--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "codemirror": "^5.62.3",
     "core-js": "^3.6.5",
     "vue": "^3.0.0"
   },
