--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "private": true,
   "scripts": {
+    "test": "jest",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
@@ -37,6 +38,7 @@
     "electron-rebuild": "^3.2.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "jest": "^27.2.5",
     "vue-cli-plugin-electron-builder": "~2.1.1"
   },
   "eslintConfig": {
